# ComradeBot

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs
src/handlers/: serenity.rs
